src/scripts/Providers/Dropdown/Virtual_Select/scss/_virtualselect.scss
/* VirtualSelect Library Core Styles */
// Import VirtualSelect library styles
@import 'virtualselect_lib';

// VirtualSelect overriding styles
// Parent wrapper container
.vscomp-ele {
	max-width: initial;

	&.pop-comp-active {
		.vscomp-toggle-button {
			border-color: var(--color-primary);

			&:after {
				color: var(--color-primary);
				transform: rotate(180deg);
			}
		}
	}
}

// Wrapper container
.vscomp-wrapper {
	position: relative;

	&.focused,
	&:focus {
		.vscomp-toggle-button {
			box-shadow: none;
		}

		.checkbox-icon {
			border-color: var(--color-neutral-6);
		}
	}

	&.has-value {
		&.show-value-as-tags {
			.vscomp-toggle-button {
				padding-left: var(--space-s);
			}
		}
	}

	&.multiple {
		.vscomp-search-container {
			padding-left: var(--space-base);

			&:before {
				display: none;
			}
		}

		.vscomp-option {
			&.selected {
				.checkbox-icon {
					background-color: var(--color-primary);
					border-color: var(--color-primary);

					&:after {
						border-color: var(--color-neutral-0);
						border-left-color: transparent;
						border-top-color: transparent;
						height: 80%;
						opacity: 1;
						transform: rotate(45deg) translate(3px, -3px);
						width: 45%;
					}
				}
			}

			.vscomp-option-text {
				flex: 1;
				width: auto;
			}
		}
	}

	&.show-value-as-tags {
		.vscomp-toggle-button {
			height: auto;
			min-height: 40px;
			padding: var(--space-xs) var(--space-xxl) var(--space-none) var(--space-base);
		}

		.vscomp-value-tag {
			background-color: var(--color-neutral-3);
			border: var(--border-size-none);
			color: var(--color-neutral-7);
			font-size: var(--font-size-xs);
			font-weight: var(--font-semi-bold);
			padding: 6px 35px 6px 10px;
			position: relative;

			.vscomp-value-tag-content {
				width: 100%;
			}

			.vscomp-value-tag-clear-button {
				background-color: var(--color-neutral-7);
				border-radius: 100%;
				height: 15px;
				position: absolute;
				right: 10px;
				width: 15px;

				.vscomp-clear-icon {
					height: 11px;
					left: 0px;
					position: relative;
					top: 0px;
					width: 11px;

					&:before,
					&:after {
						background-color: var(--color-neutral-3);
						border-radius: 4px;
						height: 100%;
						width: 2px;
					}
				}
			}
		}
	}

	// Checkbox
	.checkbox-icon {
		background-color: var(--color-neutral-0);
		border-radius: var(--border-radius-soft);
		border: var(--border-size-s) solid var(--color-neutral-5);
		height: 16px;
		margin-right: var(--space-s);
		overflow: hidden;
		transition: background-color 0.25s ease;
		width: 16px;

		&:after {
			backface-visibility: hidden;
			border-color: transparent;
			height: 85%;
			opacity: 0;
			transition: opacity 0.25s ease;
			width: 40%;
		}

		&.checked {
			background-color: var(--color-primary);
			border-color: var(--color-primary);

			&:after {
				border-color: var(--color-neutral-0);
				border-left-color: transparent;
				border-top-color: transparent;
				height: 80%;
				opacity: 1;
				transform: rotate(45deg) translate(3px, -3px);
				width: 45%;
			}
		}
	}
}

// Top part - Select to open dropdown
.vscomp-toggle-button {
	background-color: var(--color-neutral-0);
	border-radius: var(--border-radius-soft);
	border: var(--border-size-s) solid var(--color-neutral-5);
	color: var(--color-neutral-9);
	cursor: pointer;
	display: inline-flex;
	height: 40px;
	line-height: 40px;
	min-width: 180px;
	padding: var(--space-xs) var(--space-xl) var(--space-xs) var(--space-base);
	position: relative;
	transition: height, border-color 0.25s ease;
	vertical-align: middle;
	width: 100%;

	// Create new arrow for all dropdown types
	&:after {
		color: var(--color-neutral-7);
		content: '';
		font-family: 'FontAwesome';
		font: normal normal normal 24px/1 FontAwesome;
		position: absolute;
		right: 16px;
		top: 8px;
		transform-origin: center;
		transition: all 0.25s ease;
	}

	&:hover {
		border-color: var(--color-neutral-6);
	}
}

// Container with the selected value(s)
.vscomp-value {
	font-size: var(--font-size-s);
}

// Default dropdown arrow
.vscomp-arrow {
	display: none;
}

// Bottom part - Parent wrapper opptions container
.pop-comp-wrapper {
	box-shadow: none;
}

// Wrapper options container
.vscomp-dropbox {
	background-color: var(--color-neutral-0);
	border-radius: var(--border-radius-soft);
	border: var(--border-size-s) solid var(--color-neutral-5);
	overflow: hidden;
}

// Opptions container input search wrapper
.vscomp-search-container {
	border-bottom: var(--border-size-s) solid var(--color-neutral-5);
	padding: var(--space-none) var(--space-s) var(--space-none) var(--space-xl);
	position: relative;

	&:before {
		align-items: center;
		color: var(--color-neutral-6);
		content: '';
		display: flex;
		font: normal normal normal 14px/1 FontAwesome;
		height: 100%;
		left: 16px;
		position: absolute;
		top: 0;
	}
}

// Opptions container input search
.vscomp-search-input {
	font-size: var(--font-size-s);

	&::placeholder {
		color: var(--color-neutral-9);
		opacity: 0.5;
	}
}

// Option Item
.vscomp-option {
	background-color: var(--color-neutral-0);
	transition: background-color 0.25s ease;

	&.focused,
	&.selected {
		background-color: var(--color-neutral-3);
	}

	&.focused {
		background-color: var(--color-neutral-2);
	}
}

// Option Item text
.vscomp-option-text {
	align-items: center;
	color: var(--color-neutral-9);
	display: flex;
	font-size: var(--font-size-s);
}

// Accessibility -----------------------------------------------------------------
///
.has-accessible-features {
	.vscomp-wrapper {
		&:not(.has-value) {
			.vscomp-value {
				opacity: 0.8;
			}
		}
	}

	.vscomp-toggle-button {
		border-color: var(--color-neutral-7);
		color: var(--color-neutral-10);

		&:after {
			color: var(--color-neutral-9);
		}
	}
}

// Responsive --------------------------------------------------------------------
///
.phone,
.tablet {
	.vscomp-wrapper {
		&.show-value-as-tags {
			.vscomp-toggle-button {
				min-height: 48px;
			}
		}
	}

	.vscomp-toggle-button {
		height: 48px;
	}
}

